[package]
name = "volute"
version = "1.1.0"
edition = "2021"

authors = ["Gabriel Gouvine <gabriel.gouvine_cargo@m4x.org>"]
description = "Boolean functions implementation, represented as lookup tables"
license = "MIT OR Apache-2.0"
keywords = ["boolean", "logic", "LUT", "lookup-table", "truth-table", "SOP", "ESOP"]
repository = "https://github.com/Coloquinte/volute"
homepage = "https://github.com/Coloquinte/volute"
categories = ["mathematics", "algorithms"]

[dependencies]
# For random function generation
rand = { version = "0.8.5", optional = true }
# For optimization using Mixed-Integer-Programming
good_lp = { version = "1.7", features = ["highs"], default-features = false, optional = true }
# For optimization using SAT solvers
rustsat = { version = "0.4.0", optional = true }
rustsat-kissat = { version = "0.1.3", optional = true }

[features]
default = ["rand"]
# Generation of random functions
rand = ["dep:rand"]
# Optimization of function representation using Mixed-Integer-Programming
optim-mip = ["dep:good_lp"]
# Optimization of function representation using SAT
optim-sat = ["dep:rustsat", "dep:rustsat-kissat"]

[dev-dependencies]
# Benchmarking
criterion = "0.5"

[[bench]]
name = "canonization"
harness = false

[package.metadata.docs.rs]
# Document all features
all-features = true
# Used to enable doc_cfg in nightly
rustdoc-args = ["--cfg", "docsrs"]
